.opsera-valentine1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-valentine1-dev
  labels:
    tenant: opsera
    app: valentine1
    environment: dev
    managed-by: opsera-c2c
